--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       "type": "Feature",
       "properties": {
         "Name": "Lakhbir Singh @ Rode",
-        "Description": "District: nan<br>Village/Area Name: nan<br>Full Address: WJMC+7X5, Cantonment Area, Firozpur, Punjab 152001<br>Associates of: Consignment"
+        "Description": "District: Firozpur<br>Village/Area Name: nan<br>Full Address: WJMC+7X5, Cantonment Area, Firozpur, Punjab 152001<br>Associates of: Consignment"
       },
       "geometry": {
         "type": "Point",
@@ -117,7 +117,7 @@
       "type": "Feature",
       "properties": {
         "Name": "Pak based Harwinder Singh @ Rinda",
-        "Description": "District: nan<br>Village/Area Name: nan<br>Full Address: Patti, Punjab 143416<br>Associates of: Consignment"
+        "Description": "District: Tarn Taran<br>Village/Area Name: nan<br>Full Address: Patti, Punjab 143416<br>Associates of: Consignment"
       },
       "geometry": {
         "type": "Point",
@@ -133,7 +133,7 @@
       "type": "Feature",
       "properties": {
         "Name": "Gurpreet Hari Nau targeted killing case",
-        "Description": "District: nan<br>Village/Area Name: nan<br>Full Address: 7HGR+P55, Sangrur Rd, Dhanaula, Punjab 148105<br>Associates of: Consignment"
+        "Description": "District: Barnala<br>Village/Area Name: nan<br>Full Address: 7HGR+P55, Sangrur Rd, Dhanaula, Punjab 148105<br>Associates of: Consignment"
       },
       "geometry": {
         "type": "Point",
@@ -149,7 +149,7 @@
       "type": "Feature",
       "properties": {
         "Name": "IED attack on PS Kalwan by BKI module led by Harwinder @ RInda",
-        "Description": "District: nan<br>Village/Area Name: nan<br>Full Address: Hoshiarpur Una Road, Hoshiarpur<br>Associates of: Consignment"
+        "Description": "District: Hoshiarpur<br>Village/Area Name: nan<br>Full Address: Hoshiarpur Una Road, Hoshiarpur<br>Associates of: Consignment"
       },
       "geometry": {
         "type": "Point",
@@ -165,7 +165,7 @@
       "type": "Feature",
       "properties": {
         "Name": "Germany based Gurmeet Singh @ Bagga and Ranjit Singh @ Neeta, chief of KZF",
-        "Description": "District: nan<br>Village/Area Name: nan<br>Full Address: Vill. Rajoke, Tarn Taran<br>Associates of: Consignment"
+        "Description": "District: Tarn Taran<br>Village/Area Name: nan<br>Full Address: Vill. Rajoke, Tarn Taran<br>Associates of: Consignment"
       },
       "geometry": {
         "type": "Point",
@@ -181,7 +181,7 @@
       "type": "Feature",
       "properties": {
         "Name": "UK based Gurpreet Singh @ Khalsa",
-        "Description": "District: nan<br>Village/Area Name: nan<br>Full Address: Near bordering area of Sarai Amanat Khan, Distt. Amritsar-R.<br>Associates of: Consignment"
+        "Description": "District: Amritsar-R<br>Village/Area Name: nan<br>Full Address: Near bordering area of Sarai Amanat Khan, Distt. Amritsar-R.<br>Associates of: Consignment"
       },
       "geometry": {
         "type": "Point",
@@ -197,7 +197,7 @@
       "type": "Feature",
       "properties": {
         "Name": "HG attack at CIA Nawanshahr by BKI module",
-        "Description": "District: nan<br>Village/Area Name: nan<br>Full Address: Jagraon via Laddowal bypass.<br>Associates of: Consignment"
+        "Description": "District: Ludhiana<br>Village/Area Name: nan<br>Full Address: Jagraon via Laddowal bypass.<br>Associates of: Consignment"
       },
       "geometry": {
         "type": "Point",
@@ -213,7 +213,7 @@
       "type": "Feature",
       "properties": {
         "Name": "IED attack at Ajnala, HG attacks at PP Gurbaksh Nagar :",
-        "Description": "District: nan<br>Village/Area Name: nan<br>Full Address: Khakha Morr on Verowal road<br>Associates of: Consignment"
+        "Description": "District: Amritsar-R<br>Village/Area Name: nan<br>Full Address: Khakha Morr on Verowal road<br>Associates of: Consignment"
       },
       "geometry": {
         "type": "Point",
@@ -229,7 +229,7 @@
       "type": "Feature",
       "properties": {
         "Name": "Ludhiana Court Blast Module, December 23, 2021:",
-        "Description": "District: nan<br>Village/Area Name: nan<br>Full Address: village Ballarwal, Amritsar<br>Associates of: Consignment"
+        "Description": "District: Amritsar-R<br>Village/Area Name: nan<br>Full Address: village Ballarwal, Amritsar<br>Associates of: Consignment"
       },
       "geometry": {
         "type": "Point",
@@ -245,7 +245,7 @@
       "type": "Feature",
       "properties": {
         "Name": "Arsh Dala module involved in HG attack at Petrol Pump, Mansa (Oct 27, 2024) :",
-        "Description": "District: nan<br>Village/Area Name: nan<br>Full Address: near Vill. Kala on Attari road (Tarn Taran)<br>Associates of: Consignment"
+        "Description": "District: Tarn Taran<br>Village/Area Name: nan<br>Full Address: near Vill. Kala on Attari road (Tarn Taran)<br>Associates of: Consignment"
       },
       "geometry": {
         "type": "Point",
