--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       "type": "Feature",
       "properties": {
         "Name": "IED attack at Ajnala, HG attacks at PP Gurbaksh Nagar :",
-        "Description": "District: Amritsar-R<br>Village/Area Name: nan<br>Full Address: Khakha Morr on Verowal road<br>Associates of: Consignment"
+        "Description": "District: Tarn Taran<br>Village/Area Name: nan<br>Full Address: Khakha Morr on Verowal road<br>Associates of: Consignment"
       },
       "geometry": {
         "type": "Point",
