--- a/index.html
+++ b/index.html
@@ -352,9 +352,13 @@ geoJsonData.features.forEach(feature => {
 
         // Info window
         marker.addListener('click', () => {
-            infoWindow.setContent(marker.getTitle());
-            infoWindow.open(map, marker);
-        });
+                    const featureProperties = marker.customFeatureData;
+                    const name = featureProperties.Name || 'Name not available';
+                    const description = featureProperties.Description || 'Description not available';
+                    const content = `<b>Name:</b> ${name}<br><br>${description}`;
+                    infoWindow.setContent(content);
+                    infoWindow.open(map, marker);
+                });
     }
 });
 
