--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Google Maps API v3 : KML Layer</title>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3&sensor=false&libraries=geometry"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&libraries=geometry"></script>
     <style>
         body {
             font-family: sans-serif;
