--- a/index.html
+++ b/index.html
@@ -1570,7 +1570,7 @@ const associateColors = {
                 const marker = new google.maps.Marker({
                     position: { lat: latitude, lng: longitude },
                     map: map,
-                    title: feature.properties.Description,
+                    title: feature.properties.Name,
                     icon: {
                 url: iconUrl
             }
@@ -1583,8 +1583,9 @@ const associateColors = {
 
                 // Add an info window to the marker on click
                 marker.addListener('click', () => {
-                    infoWindow.setContent(marker.getTitle());
-                    infoWindow.open(map, marker);
+            const content = `<h3>${feature.properties.Name}</h3><p>${feature.properties.Description}</p>`;
+            infoWindow.setContent(content);
+            infoWindow.open(map, marker);
                 });
             }
         });
