--- a/index.html
+++ b/index.html
@@ -1577,7 +1577,7 @@ const associateColors = {
                 });
                 
                 // Attach the feature data directly to the marker object
-                marker.customFeatureData = feature.properties;
+                //marker.customFeatureData = feature.properties;
                 
                 markers.push(marker);
 
