--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
     const associateColors = {
         'Arsh Dala': 'http://maps.google.com/mapfiles/ms/icons/red-dot.png',
         'Rinda': 'http://maps.google.com/mapfiles/ms/icons/blue-dot.png',
-        'Nishan Singh Jourian': 'http://maps.google.com/mapfiles/ms/icons/green-dot.png',
         'Jeevan Fauji': 'http://maps.google.com/mapfiles/ms/icons/yellow-dot.png',
         'Honey': 'http://maps.google.com/mapfiles/ms/icons/orange-dot.png',
         'Baggi @ Manu Agwan': 'http://maps.google.com/mapfiles/ms/icons/purple-dot.png',
         'Billa': 'http://maps.google.com/mapfiles/ms/icons/pink-dot.png',
-        'Landa': 'http://maps.google.com/mapfiles/ms/icons/ltblue-dot.png'
+        'Landa': 'http://maps.google.com/mapfiles/ms/icons/ltblue-dot.png',
+        'Consignment': 'http://maps.google.com/mapfiles/ms/icons/green-dot.png',
     };
     const geoJsonData = {
 "type": "FeatureCollection",
