--- a/index.html
+++ b/index.html
@@ -1625,7 +1625,7 @@ const infoWindow = new google.maps.InfoWindow();
     }
     
     // Call initMap when the window loads
-    window.onload = initMap;
+   // window.onload = initMap;
 </script>
 </body>
 </html>
