--- a/index.html
+++ b/index.html
@@ -1584,7 +1584,11 @@ const infoWindow = new google.maps.InfoWindow();
                 // Add an info window to the marker on click
                 const featureData = marker.customFeatureData;
 
-    // Create the content string for the info window
+               marker.addListener('click', () => {
+                // Get the custom feature data we attached to the marker
+                const featureData = marker.customFeatureData;
+            
+                // Create the content string for the info window
                 let contentString = `
                     <div style="font-family: sans-serif; line-height: 1.5;">
                         <b>Name:</b> ${featureData.Name}<br>
@@ -1595,8 +1599,7 @@ const infoWindow = new google.maps.InfoWindow();
                 // Set the content and open the info window
                 infoWindow.setContent(contentString);
                 infoWindow.open(map, marker);
-            }
-        });
+            });
     
         // Add event listeners to the checkboxes
         document.querySelectorAll('input[type="checkbox"]').forEach(checkbox => {
